--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,22 +21,24 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
+        shell: bash
         run: python3 -m pip install -t site-packages ezdxf==1.0.3
       - name: Generate release tag
         id: tag
+        shell: bash
         run: echo "release_tag=build_$(date +"%Y.%m.%d_%H-%M")" >> "$GITHUB_OUTPUT"
 
       - name: Zip
         shell: bash
         run: |
-          mkdir ${{ steps.tag.outputs.release_tag }}
-          mv LICENSE README.md sketch-export-dxf.manifest sketch-export-dxf.py ${{ steps.tag.outputs.release_tag }}
-          mv src ${{ steps.tag.outputs.release_tag }}
-          mv site-packages/ ${{ steps.tag.outputs.release_tag }}
-          zip archive -r ${{ steps.tag.outputs.release_tag }}
+          mkdir dist
+          mv LICENSE README.md sketch-export-dxf.manifest sketch-export-dxf.py dist
+          mv src dist
+          mv site-packages/ dist
+          zip ${{ matrix.os }}-${{ steps.tag.outputs.release_tag }}.zip -r dist
 
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ steps.tag.outputs.release_tag }}
-          files: ${{ matrix.os }}.zip
+          files: ${{ matrix.os }}-${{ steps.tag.outputs.release_tag }}.zip
