--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,13 +28,23 @@ jobs:
         shell: bash
         run: echo "release_tag=build_$(date +"%Y.%m.%d_%H-%M")" >> "$GITHUB_OUTPUT"
 
-      - name: Zip
+      - name: dist
         shell: bash
         run: |
-          mkdir dist
-          mv LICENSE README.md sketch-export-dxf.manifest sketch-export-dxf.py dist
-          mv src dist
-          mv site-packages/ dist
+          mkdir sketch-export-dxf
+          mv LICENSE README.md sketch-export-dxf.manifest sketch-export-dxf.py sketch-export-dxf
+          mv src sketch-export-dxf
+          mv site-packages/ sketch-export-dxf
+          rm sketch-export-dxf/**/__pycache__/**
+
+      - name: Package for windows
+        if: matrix.os == 'windows-latest'
+        shell: powershell
+        run: Compress-Archive -Path dist/* -Destination ${{ matrix.os }}-${{ steps.tag.outputs.release_tag }}.zip
+
+      - name: Package for macOS
+        if: matrix.os == 'macos-latest'
+        run: |
           zip ${{ matrix.os }}-${{ steps.tag.outputs.release_tag }}.zip -r dist
 
       - name: Release
